--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "http://vigneshiyergithub.github.io/react-tutorials",
-  "name": "react-tutorials",
+  "name": "react-tutorials/#/",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
