--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "homepage": "http://vigneshiyergithub.github.io/react-tutorials",
-  "name": "react-tutorials/#/",
+  "name": "react-tutorials",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
@@ -10,6 +10,7 @@
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-embed-gist": "^1.0.11",
+    "react-json-view": "^1.21.3",
     "react-scripts": "4.0.3",
     "styled-components": "^5.2.1",
     "web-vitals": "^1.0.1"
